

==============================
Release 5.*
==============================
2014-06-08    Since not everything can be changed by assigning the WPFWindow style, the whole functionality has to be removed
2014-06-08    The WPFMessageBox shows the minimize and maximize buttons if it can be resized
2014-06-07    Add ScrollViewer control to WPFMessageBox to show a vertical scrollbar if the text became to long
2014-06-07    The continue button was not able to get the default focus
2014-06-07    Setting the default button on the WPFMessageBox was not working
2014-06-07    Add "_Don't show this message again" checkbox possibility to the WPFMessageBox
2014-06-04    Adjust ButtonsPanel in WPFMessageBox to have dynamic longer buttons if the text is adjusted
2014-06-04    If there are many buttons in the WPFMessageBoxOptions which became cut, the MaxWidth will be adjusted
2014-06-04    Add some window options to the WPFMessageBoxOptions
2014-06-04    Change horizontal title alignments default in the TitledItemsControl to left (like written in the documentation)
2014-06-04    Add EnumerationComboBox
2014-06-03    Add YesToAll and NoToAll button possibilities to the WPFMessageBox
2014-06-02    Add KeyboardWatcher to observe keyboard events (keyboard hooks) even the app has not the focus
2014-05-25    Add CancelTryAgainContinue to WPFMessageBox
2014-05-25    Add optional help button to the WPFMessageBox
2014-05-25    Change messagebox text from TextBlock to Label to have it catchable by coded UI
2014-05-25    Add missing automation ID for the messagebox text and icon
2014-05-25    Load message box strings from the system and add possibility to define new from outside
2014-05-24    Add changeable copy formatter to the WPFMessageBox
2014-05-24    Add possibility to add and change the system menu and icon in the WPFMessageBox
2014-05-24    Add custom text block control to the WPFMessageBox to show the message
2014-05-24    Disable system menu in WPFMessageBox