@@ -3,6 +3,7 @@
 ==============================
 Release 5.*
 ==============================
+2014-06-08    Organize options for the WPFMessageBox window to a separate object in the WPFMessageBoxOptions
 2014-06-08    Since not everything can be changed by assigning the WPFWindow style, the whole functionality has to be removed
 2014-06-08    The WPFMessageBox shows the minimize and maximize buttons if it can be resized
 2014-06-07    Add ScrollViewer control to WPFMessageBox to show a vertical scrollbar if the text became to long
